testsuite/tests/grammar/invalid_lexers/case_1.lkt
from common import Example

lexer foo_example {
    Foo <- null
    match 1 {
        else send(Foo, 3)
    }
}
